<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/navigation_forecast"
        android:icon="@drawable/rain_10d"
        android:title="@string/forecast">

    </item>


    <item
        android:id="@+id/navigation_maps"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/maps">

    </item>
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_baseline_star_24px"
        android:title="@string/title_favorites"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_settings">
    </item>


</menu>